--- a/ps4test2.css
+++ b/ps4test2.css
@@ -48,15 +48,15 @@ do so via my Imraising page: https://imraising.tv/u/mrmcpowned
     display: none;
 }
 .custom .triggers{ /* The triggers are housed inside a div, so this sizes the div properly and positions it */
-    width: 586px;
-    height: 65px;
+    width: 588px;
+    height: 90px;
     position: absolute;
-    left: 99px;
+    left: 109px;
 }
 .custom .trigger{/* These are the actual triggers themselves */
-    width:86px;
-    height:65px;
-    background: url(https://i.imgur.com/J34y1Ge.png);
+    width: 99px;
+    height: 100%;
+    background: url(https://i.imgur.com/q7FV57u.png);
     opacity: 0;
 }
 /* The left and right classes below are used to position the triggers
@@ -68,22 +68,23 @@ above to achieve the desired position. */
 }
 .custom .trigger.right{
     float: right;
+    background-position-x: 99px;
 }
 
 /* The bumpers follow the same methodology as the triggers in terms of
 placement */
 .custom .bumper{
-    width: 89px;
-    height: 28px;
-    background: url(https://i.imgur.com/byl45xW.png);
+    width: 99px;
+    height: 23px;
+    background: url(https://i.imgur.com/ourZjhL.png) no-repeat;
     opacity: 0;
 }
 .custom .bumpers{
     position: absolute;
-    width: 586px;
-    height: 28px;
-    left: 99px;
-    top: 72px;
+    width: 588px;
+    height: 23px;
+    left: 109px;
+    top: 94px;
 }
 .custom .bumper.pressed{ /* The '.pressed' class is used for most buttons to signify they've been pressed */
     opacity: 1;
@@ -93,12 +94,35 @@ placement */
   and I can just rotate them in the browser? Also, note that you most likely won't need
   to use a browser speficic prefix unless it's something that is indeed browser specific.
   NOTE: CLR Browser is basically chrome, so you use '-webkit-' as the browser prefix. */
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
+    /*-webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);*/
     float: left;
 }
 .custom .bumper.right{
     float: right;
+    transform: rotateY(180deg);
+}
+.custom .touchpad {
+    width: 262px;
+    height: 151px;
+    position: absolute;
+    left: 272px;
+    top: 122px;
+}
+.custom .touchpad.pressed {
+    background: url(https://i.imgur.com/wWYw69p.png) no-repeat center;
+}
+
+.custom .meta {
+    width: 42px;
+    height: 42px;
+    position: absolute;
+    left: 382px;
+    bottom: 216px;
+}
+
+.custom .meta.pressed {
+    background: url(https://i.imgur.com/1wD9Brp.png) no-repeat center;
 }
 /* This bit of code is for the player indicator, which is represented in
 quandrants on the xbox controller. That's note what it's called on the
@@ -131,88 +155,90 @@ NOTE: Player orderin starts at 0, so p0 = Player 1 */
 start and select buttons. */
 .custom .arrows{
     position: absolute;
-    width: 205px;
-    height: 19px;
-    top: 250px;
-    left: 291px;
+    width: 352px;
+    height: 46px;
+    top: 142px;
+    left: 227px;
 }
 /* Setting the size and CSS sprite for the start adn select buttons */
 .custom .back, .custom .start{
-    background: url(https://i.imgur.com/bGRExhG.png);
-    width: 34px;
-    height: 19px;
+    background: url(https://i.imgur.com/PVzVHG6.png);
+    width: 28px;
+    height: 46px;
+    opacity: 0;
 }
 .custom .back.pressed, .custom .start.pressed{
-    background-position-y: -21px;
-    margin-top: 2px;
+    /* background-position-y: -21px; */
+    /* margin-top: 2px; */
+    opacity: 1;
 }
 .custom .back{
     float: left;
-    width: 38px;
+    /* width: 28px; */
 }
 .custom .start{
     float: right;
-    width: 36px;
-    background-position: 37px 0;
+    /* width: 28px; */
+    background-position: 28px 0;
 }
 /* Positioning and size of the container for the face buttons */
 .custom .abxy{
     position: absolute;
-    width: 204px;
-    height: 205px;
-    top: 156px;
-    left: 538px;
+    width: 170px;
+    height: 171px;
+    top: 159px;
+    left: 567px;
 }
 /* base class used to simplify the sprite mapping */
 .custom .button{
     position: absolute;
-    width:62px;
-    height:62px;
-    background: url(https://i.imgur.com/TRrgLfS.png);
+    width: 55px;
+    height: 55px;
+    background: url(https://i.imgur.com/OuqFYfV.png);
 }
 .custom .button.pressed{
-    background-position-y: -64px;
-    margin-top: 5px;
+    background-position-y: 55px;
+    /* margin-top: 5px; */
 }
 .custom .a{
-    background-position: 62px 0;
-    top: 142px;
-    left: 71px;
+    background-position: 0 0;
+    bottom: 0;
+    left: 58px;
 }
 .custom .b{
-    background-position: 125px 0;
-    top: 71px;
+    background-position: -57px 0;
+    top: 58px;
     right: 0px;
 }
 .custom .x{
-    background-position: 0 0;
-    top: 71px;
+    background-position: -113px 0;
+    top: 58px;
 }
 .custom .y{
-    background-position: -63px 0;
-    left: 71px;
+    background-position: 55px 0;
+    left: 58px;
 }
 /* Analog sticks follow the same principles as the triggers in terms of positioning
 Note that the rotation of the sticks in hard coded with javascript, so it applies 
 the CSS inline. */
 .custom .sticks{
     position: absolute;
-    width: 364px;
+    width: 361px;
     height: 105px;
-    top: 328px;
-    left: 210px;
+    top: 308px;
+    left: 228px;
 }
 .custom .stick{
     position: absolute;
-    background: url(https://i.imgur.com/1ItD69g.png);
-    height:105px;
-    width: 105px;
+    background: url(https://i.imgur.com/uAlCu7X.png);
+    height: 94px;
+    width: 94px;
 }
 .custom .stick.pressed.left{
-    background-position-x: -106px;
+    background-position-x: -96px;
 }
 .custom .stick.pressed.right{
-    background-position-x: -211px;
+    background-position-x: -192px;
 }
 .custom .stick.left{
     top: 0;
@@ -225,45 +251,45 @@ the CSS inline. */
 /* Dpad possitioning and sizing */
 .custom .dpad{
     position: absolute;
-    width: 140px;
-    height: 132px;
-    top: 192px;
-    left: 74px;
+    width: 125px;
+    height: 126px;
+    top: 181px;
+    left: 92px;
 }
 .custom .face{
-    background: url(https://i.imgur.com/hcVxfa6.png);
+    background: url(https://i.imgur.com/L0dGC8l.png);
     position: absolute;
 }
 .custom .face.up, .custom .face.down{
-    width: 38px;
+    width: 36px;
     height: 52px;
 }
 .custom .face.left, .custom .face.right{
     width: 52px;
-    height: 38px;
+    height: 36px;
 }
 .custom .face.up{
-    left: 50px;
+    left: 44px;
     top: 0;
-    background-position: 92px 0px;
+    background-position: -37px 0px;
 }
 .custom .face.down{
-    left: 50px;
-    top: 79px;
-    background-position: 131px 0;
-}
-.custom .face.left{
-    top: 47px;
-    left: 0;
+    left: 44px;
+    bottom: 0;
     background-position: 0px 0;
 }
+.custom .face.left{
+    top: 45px;
+    left: 0;
+    background-position: 104px 0;
+}
 .custom .face.right{
-    top: 47px;
+    top: 45px;
     right: 0px;
-    background-position: 53px 0;
+    background-position: 52px 0;
 }
 .custom .face.pressed{
-    margin-top: 5px;
+    /* margin-top: 5px; */
     background-position-y: 52px;
 }
 /* The following entries are empty because I haven't used them yet, but they
